[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tristate-agent"
version = "0.1.0"
description = "LLM memory branching via tristate agents — SWORD conversation pipeline + SILO ingest pipeline"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "fkpkiva", email = ""}
]
keywords = [
    "llm", "ai-agents", "memory", "context-management",
    "multi-agent", "tristate", "sword-pipeline", "context-window",
    "long-context", "conversation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
openai = [
    "openai>=1.0",
]
numpy = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tristate_agent*"]

[project.urls]
Homepage = "https://github.com/fkpkiva/tristate-agent"
Repository = "https://github.com/fkpkiva/tristate-agent"
Changelog = "https://github.com/fkpkiva/tristate-agent/blob/main/CHANGELOG.md"
